# adk-samples

python/agents/travel-research/: .env.example  CLAUDE.md  pyproject.toml  requirements.txt
python/agents/travel-research/docs/plans/: 2026-02-21-travel-research-agent-design.md  2026-02-21-travel-research-agent-plan.md
python/agents/travel-research/tests/: test_agent.py  test_pdf_generator.py
python/agents/travel-research/travel_research/: __init__.py  agent.py  prompt.py
python/agents/travel-research/travel_research/shared_libraries/: __init__.py  constants.py
python/agents/travel-research/travel_research/sub_agents/: __init__.py
python/agents/travel-research/travel_research/sub_agents/attractions_agent/: __init__.py  agent.py  prompt.py
python/agents/travel-research/travel_research/sub_agents/itinerary_agent/: __init__.py  agent.py  prompt.py
python/agents/travel-research/travel_research/sub_agents/logistics_agent/: __init__.py  agent.py  prompt.py
python/agents/travel-research/travel_research/sub_agents/report_agent/: __init__.py  agent.py  prompt.py
python/agents/travel-research/travel_research/sub_agents/search_agent/: __init__.py  agent.py  prompt.py
python/agents/travel-research/travel_research/tools/: __init__.py  pdf_generator.py
